--- a/bubu.html
+++ b/bubu.html
@@ -25,13 +25,17 @@
     <main>
         <div id="main-content">
                 <article>
+                    <header>
+                        <h2> I don't know, I just write this</h2>
+                        <h3> doesn't take a lot of time to read....</h3>
+                    </header>
             <!--main content-->
             this is the main.
             <p>got this</p>
     
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, possimus.</p>
             <blockquote>
-                "omanko" - <cite>pu**y</cite>
+                "um, yes?" - <cite>????</cite>
             </blockquote>
             anyway
 
